<resources>
    <string name="app_name">Human Nutrition</string>
    <string name="TAG">Human_Nutrition</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Sign Up</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_deplicate_email">This email address is already registered</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>


    <string name="Resource_Address" translatable="false">http://aaamg.ga</string>
    <string name="Login_Address" translatable="false">/Human_Nutrition/Mobile/Login.php</string>
    <string name="SignUp_Address" translatable="false">/Human_Nutrition/Mobile/SignUp.php</string>
    <string name="UpdateToken_Address" translatable="false">/Human_Nutrition/Mobile/Update_Token.php</string>


    <string name="activity_unknown">Activity Unknown</string>
    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">Walking</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="logo_image">logo image</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="remember_me">Remember me</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_goal">Goal</string>
    <string name="nav_nutrition">Nutrition</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_settings">Settings</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Goal</item>
        <item>Nutrition</item>
        <item>Tools</item>
        <item>Settings</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello Home fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_goal_fragment">Hello Goal fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="signup_notch">signup_Notch</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select Gender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
