<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- Here you can replace it with your logo or brand name -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:contentDescription="@string/logo_image"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:textColorHint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:hint="@string/prompt_email"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:maxLines="1"
                    android:drawableStart="@drawable/ic_person_24dp"

                    android:layout_marginTop="70dp"
                    />


            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="16dp"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLayout"
                android:textColorHint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled = "true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:drawablePadding="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="4dp"
                    android:drawableStart="@drawable/ic_lock_24dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                />


            <!--<CheckBox-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:text="@string/remember_me"-->
                <!--android:textColor="@color/colorAccent"-->
                <!--android:padding="8dp"-->
                <!--/>-->

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/emailSignIn_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textStyle="normal"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:padding="16dp"
            android:clickable="true"
            android:layout_marginTop="24dp"
            android:focusable="true"
            app:pb_cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:pb_colorComplete="@color/colorGreen"
            app:pb_colorError="@color/red_error"
            app:pb_colorNormal="@color/colorPrimary"
            app:pb_colorPressed="@color/blue_pressed"
            app:pb_colorProgress="@color/colorPrimaryDark"
            app:pb_textComplete="Success"
            app:pb_textError="Error"
            app:pb_textProgress="Loading" />



        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/emailSignUp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textStyle="normal"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            app:pb_cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:pb_colorComplete="@color/colorPrimary"
            app:pb_colorError="@color/red_error"
            app:pb_colorNormal="@color/colorPrimary"
            app:pb_colorPressed="@color/blue_pressed"
            app:pb_colorProgress="@color/colorPrimaryDark"
            app:pb_textComplete="@string/action_register"
            app:pb_textError="Error"
            app:pb_textProgress="Loading" />

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/forget_your_password"-->
                <!--style="@style/TextAppearance.AppCompat.Body1"-->
                <!--android:textColor="#fff"-->
                <!--android:padding="16dp"-->
                <!--android:clickable="true"-->
                <!--android:layout_marginBottom="16dp"/>-->
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
